--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Google_loginpagecopy"
         tools:targetApi="31">
         <activity
+            android:name=".favorit_aktifvitas_makanan"
+            android:exported="false" />
+        <activity
             android:name=".PasswordAttemptActivity"
             android:exported="false" />
         <activity
